"Added error logging to authMiddleware, extracted dashboard route to dashboardController, and updated logout link in dashboard view"

--- a/src/resource/views/layouts/app.ejs
+++ b/src/resource/views/layouts/app.ejs
@@ -1,8 +1,8 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-12 text-center">
-      <h1>Welcome to the Dashboard, <%= user.id %></h1>
-      <p>You are logged in as <%= user.role %></p>
+      <h1>Welcome to the Dashboard, <%= user.username %></h1>
+      <p>You are logged in as <%= user.role.name %></p>
     </div>
   </div>
   <div class="row mt-4">
