"Added setCurrentRoute middleware, updated aside.ejs and dashboard.ejs templates, and removed some dashboard examples"

--- a/src/resource/views/dashboard/dashboard.ejs
+++ b/src/resource/views/dashboard/dashboard.ejs
@@ -6,7 +6,6 @@
            <div class="full-background" style="background-image: url('https://demos.creative-tim.com/soft-ui-dashboard-pro/assets/img/curved-images/white-curved.jpeg')"></div>
            <div class="card-body pt-4 text-center">
              <h2 class="text-white mb-0 mt-2 up"><%= greeting %>, <%= user.username %>!</h2>
-             <h1 class="text-white mb-0 up">$15,800</h1>
              <span class="badge badge-lg d-block bg-gradient-dark mb-2 up">Current time: <%= currentTime %></span>
              <a href="javascript:;" class="btn btn-outline-white mb-2 px-5 up">You are logged in as <%= user.role.name %></a>
            </div>
@@ -23,7 +22,7 @@
                </div>
                <div class="ms-3">
                  <div class="numbers">
-                   <p class="text-sm mb-0 text-capitalize font-weight-bold">Total Employees</p>
+                   <p class="text-sm mb-0 text-capitalize font-weight-bold">Employees</p>
                    <h5 class="font-weight-bolder mb-0">
                      <%= summary.employeeCount %>
                    </h5>
@@ -42,7 +41,7 @@
                </div>
                <div class="ms-3">
                  <div class="numbers">
-                   <p class="text-sm mb-0 text-capitalize font-weight-bold">Total Departments</p>
+                   <p class="text-sm mb-0 text-capitalize font-weight-bold">Departments</p>
                    <h5 class="font-weight-bolder mb-0">
                      <%= summary.departmentCount %>
                    </h5>
@@ -63,7 +62,7 @@
                </div>
                <div class="ms-3">
                  <div class="numbers">
-                   <p class="text-sm mb-0 text-capitalize font-weight-bold">Total Attendance</p>
+                   <p class="text-sm mb-0 text-capitalize font-weight-bold">Attendance</p>
                    <h5 class="font-weight-bolder mb-0">
                      <%= summary.attendanceCount %>
                    </h5>
@@ -82,7 +81,7 @@
                </div>
                <div class="ms-3">
                  <div class="numbers">
-                   <p class="text-sm mb-0 text-capitalize font-weight-bold">Total Leaves</p>
+                   <p class="text-sm mb-0 text-capitalize font-weight-bold">Leaves</p>
                    <h5 class="font-weight-bolder mb-0">
                      <%= summary.leaveCount %>
                    </h5>
