--- a/src/resource/views/components/dashboard/asside.ejs
+++ b/src/resource/views/components/dashboard/asside.ejs
@@ -3,14 +3,14 @@
     <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
     <a class="navbar-brand m-0" href="../../dashboards/default.html" target="_blank">
       <img src="/public/assets/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
-      <span class="ms-1 font-weight-bold">Soft UI Dashboard PRO</span>
+      <span class="ms-1 font-weight-bold">Soft HRIS</span>
     </a>
   </div>
   <hr class="horizontal dark mt-0">
   <div class="collapse navbar-collapse  w-auto h-auto" id="sidenav-collapse-main">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a href="#dashboardsExamples" class="nav-link <%= currentRoute.startsWith('/dashboard') ? 'active' : '' %>" aria-controls="dashboardsExamples" role="button" aria-expanded="false">
+        <a href="/dashboard" class="nav-link <%= currentRoute.startsWith('/dashboard') ? 'active' : '' %>">
           <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center d-flex align-items-center justify-content-center  me-2">
             <svg width="12px" height="12px" viewBox="0 0 45 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <title>shop </title>
