--- a/src/resource/views/dashboard/employee/index.ejs
+++ b/src/resource/views/dashboard/employee/index.ejs
@@ -7,14 +7,14 @@
         <div class="card-header pb-0">
           <div class="d-lg-flex">
             <div>
-              <h5 class="mb-0">All Products</h5>
+              <h5 class="mb-0">All Employees</h5>
               <p class="text-sm mb-0">
                 A lightweight, extendable, dependency-free javascript HTML table plugin.
               </p>
             </div>
             <div class="ms-auto my-auto mt-lg-0 mt-4">
               <div class="ms-auto my-auto">
-                <a href="new-product.html" class="btn bg-gradient-primary btn-sm mb-0">+&nbsp; New Product</a>
+                <a href="/employee/add" class="btn bg-gradient-primary btn-sm mb-0">+&nbsp; New Employee</a>
                 <button type="button" class="btn btn-outline-primary btn-sm mb-0" data-bs-toggle="modal" data-bs-target="#import">
                   Import
                 </button>
