--- a/src/resource/views/dashboard/employee/index.ejs
+++ b/src/resource/views/dashboard/employee/index.ejs
@@ -67,7 +67,7 @@
                   <td class="text-sm"><%= employee.email %></td>
                   <td class="text-sm"><%= employee.phone %></td>
                   <td class="text-sm"><%= employee.position %></td>
-                  <td class="text-sm">employee.department.name</td>
+                  <td class="text-sm text-danger">employee.department.name</td>
                   <td class="text-sm"><%= new Date(employee.hiredate).toLocaleDateString('en-US', { year: 'numeric', month: 'numeric', day: 'numeric' }) %></td>
                   <td class="text-sm"><%= employee.salary %></td>
 
@@ -75,10 +75,10 @@
                     <a href="javascript:;" data-bs-toggle="tooltip" data-bs-original-title="Preview product">
                       <i class="fas fa-eye text-secondary"></i>
                     </a>
-                    <a href="/employees/edit/<%= employee._id %>" class="mx-3" data-bs-toggle="tooltip" data-bs-original-title="Edit product">
+                    <a href="/employee/edit/<%= employee._id %>" class="mx-3" data-bs-toggle="tooltip" data-bs-original-title="Edit product">
                       <i class="fas fa-user-edit text-secondary"></i>
                     </a>
-                    <a href="/employees/delete/<%= employee._id %>" data-bs-toggle="tooltip" data-bs-original-title="Delete product">
+                    <a href="/employee/delete/<%= employee._id %>" data-bs-toggle="tooltip" data-bs-original-title="Delete product">
                       <i class="fas fa-trash text-secondary"></i>
                     </a>
                   </td>
