--- a/src/resource/views/components/dashboard/asside.ejs
+++ b/src/resource/views/components/dashboard/asside.ejs
@@ -33,7 +33,7 @@
         <h6 class="ps-4  ms-2 text-uppercase text-xs font-weight-bolder opacity-6">PAGES</h6>
       </li>
       <li class="nav-item">
-        <a data-bs-toggle="collapse" href="#pagesExamples" class="nav-link " aria-controls="pagesExamples" role="button" aria-expanded="false">
+        <a data-bs-toggle="collapse" href="#pagesExamples" class="nav-link <%= currentRoute.startsWith('/employee') || currentRoute.startsWith('/departments') ? 'active' : '' %>" aria-controls="pagesExamples" role="button" aria-expanded="false">
           <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center d-flex align-items-center justify-content-center  me-2">
             <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <title>office</title>
@@ -51,160 +51,18 @@
           </div>
           <span class="nav-link-text ms-1">Pages</span>
         </a>
-        <div class="collapse  show " id="pagesExamples">
+        <div class="collapse <%= currentRoute.startsWith('/employee') || currentRoute.startsWith('/departments') ? 'show' : '' %>  " id="pagesExamples">
           <ul class="nav ms-4 ps-3">
             <li class="nav-item ">
-              <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#profileExample">
-                <span class="sidenav-mini-icon"> P </span>
-                <span class="sidenav-normal"> Profile <b class="caret"></b></span>
-              </a>
-              <div class="collapse " id="profileExample">
-                <ul class="nav nav-sm flex-column">
-                  <li class="nav-item">
-                    <a class="nav-link " href="../profile/overview.html">
-                      <span class="sidenav-mini-icon text-xs"> P </span>
-                      <span class="sidenav-normal"> Profile Overview </span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../profile/teams.html">
-                      <span class="sidenav-mini-icon text-xs"> T </span>
-                      <span class="sidenav-normal"> Teams </span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../profile/projects.html">
-                      <span class="sidenav-mini-icon text-xs"> A </span>
-                      <span class="sidenav-normal"> All Projects </span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#usersExample">
-                <span class="sidenav-mini-icon"> U </span>
-                <span class="sidenav-normal"> Users <b class="caret"></b></span>
-              </a>
-              <div class="collapse " id="usersExample">
-                <ul class="nav nav-sm flex-column">
-                  <li class="nav-item">
-                    <a class="nav-link " href="../users/reports.html">
-                      <span class="sidenav-mini-icon text-xs"> R </span>
-                      <span class="sidenav-normal"> Reports </span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../users/new-user.html">
-                      <span class="sidenav-mini-icon text-xs"> N </span>
-                      <span class="sidenav-normal"> New User </span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#accountExample">
-                <span class="sidenav-mini-icon"> A </span>
-                <span class="sidenav-normal"> Account <b class="caret"></b></span>
-              </a>
-              <div class="collapse " id="accountExample">
-                <ul class="nav nav-sm flex-column">
-                  <li class="nav-item">
-                    <a class="nav-link " href="../account/settings.html">
-                      <span class="sidenav-mini-icon text-xs"> S </span>
-                      <span class="sidenav-normal"> Settings </span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../account/billing.html">
-                      <span class="sidenav-mini-icon text-xs"> B </span>
-                      <span class="sidenav-normal"> Billing </span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../account/invoice.html">
-                      <span class="sidenav-mini-icon text-xs"> I </span>
-                      <span class="sidenav-normal"> Invoice </span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../account/security.html">
-                      <span class="sidenav-mini-icon text-xs"> S </span>
-                      <span class="sidenav-normal"> Security </span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link  active " data-bs-toggle="collapse" aria-expanded="false" href="#projectsExample">
-                <span class="sidenav-mini-icon"> P </span>
-                <span class="sidenav-normal"> Projects <b class="caret"></b></span>
-              </a>
-              <div class="collapse show" id="projectsExample">
-                <ul class="nav nav-sm flex-column">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="general.html">
-                      <span class="sidenav-mini-icon text-xs"> G </span>
-                      <span class="sidenav-normal"> General </span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="timeline.html">
-                      <span class="sidenav-mini-icon text-xs"> T </span>
-                      <span class="sidenav-normal"> Timeline </span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="new-project.html">
-                      <span class="sidenav-mini-icon text-xs"> N </span>
-                      <span class="sidenav-normal"> New Project </span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " href="../pricing-page.html">
-                <span class="sidenav-mini-icon"> P </span>
-                <span class="sidenav-normal"> Pricing Page </span>
+              <a class="nav-link <%= currentRoute.startsWith('/employee') ? 'active' : '' %>" href="/employee">
+                <span class="sidenav-mini-icon"> E </span>
+                <span class="sidenav-normal"> Employee </span>
               </a>
             </li>
-            <li class="nav-item ">
-              <a class="nav-link " href="../messages.html">
-                <span class="sidenav-mini-icon"> M </span>
-                <span class="sidenav-normal"> Messages </span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " href="../rtl-page.html">
-                <span class="sidenav-mini-icon"> R </span>
-                <span class="sidenav-normal"> RTL </span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " href="../widgets.html">
-                <span class="sidenav-mini-icon"> W </span>
-                <span class="sidenav-normal"> Widgets </span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " href="../charts.html">
-                <span class="sidenav-mini-icon"> C </span>
-                <span class="sidenav-normal"> Charts </span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " href="../sweet-alerts.html">
-                <span class="sidenav-mini-icon"> S </span>
-                <span class="sidenav-normal"> Sweet Alerts </span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " href="../notifications.html">
-                <span class="sidenav-mini-icon"> N </span>
-                <span class="sidenav-normal"> Notifications </span>
+            <li class="nav-item <%= currentRoute.startsWith('/departments') ? 'active' : '' %>">
+              <a class="nav-link employee" href="/departments">
+                <span class="sidenav-mini-icon"> D </span>
+                <span class="sidenav-normal"> Departments </span>
               </a>
             </li>
           </ul>
