--- a/src/resource/views/dashboard/departement/index.ejs
+++ b/src/resource/views/dashboard/departement/index.ejs
@@ -15,7 +15,7 @@
             <div class="ms-auto my-auto mt-lg-0 mt-4">
               <div class="ms-auto my-auto">
                 <a href="/departments/add" class="btn bg-gradient-primary btn-sm mb-0">+&nbsp; New Departemen</a>
-                <button type="button" class="btn btn-outline-primary btn-sm mb-0" data-bs-toggle="modal" data-bs-target="#import">
+                <!-- <button type="button" class="btn btn-outline-primary btn-sm mb-0" data-bs-toggle="modal" data-bs-target="#import">
                   Import
                 </button>
                 <div class="modal fade" id="import" tabindex="-1" aria-hidden="true">
@@ -41,7 +41,7 @@
                     </div>
                   </div>
                 </div>
-                <button class="btn btn-outline-primary btn-sm export mb-0 mt-sm-0 mt-1" data-type="csv" type="button" name="button">Export</button>
+                <button class="btn btn-outline-primary btn-sm export mb-0 mt-sm-0 mt-1" data-type="csv" type="button" name="button">Export</button> -->
               </div>
             </div>
           </div>
