--- a/src/resource/views/dashboard/employee/index.ejs
+++ b/src/resource/views/dashboard/employee/index.ejs
@@ -15,7 +15,7 @@
             <div class="ms-auto my-auto mt-lg-0 mt-4">
               <div class="ms-auto my-auto">
                 <a href="/employee/add" class="btn bg-gradient-primary btn-sm mb-0">+&nbsp; New Employee</a>
-                <button type="button" class="btn btn-outline-primary btn-sm mb-0" data-bs-toggle="modal" data-bs-target="#import">
+                <!-- <button type="button" class="btn btn-outline-primary btn-sm mb-0" data-bs-toggle="modal" data-bs-target="#import">
                   Import
                 </button>
                 <div class="modal fade" id="import" tabindex="-1" aria-hidden="true">
@@ -41,7 +41,7 @@
                     </div>
                   </div>
                 </div>
-                <button class="btn btn-outline-primary btn-sm export mb-0 mt-sm-0 mt-1" data-type="csv" type="button" name="button">Export</button>
+                <button class="btn btn-outline-primary btn-sm export mb-0 mt-sm-0 mt-1" data-type="csv" type="button" name="button">Export</button> -->
               </div>
             </div>
           </div>
@@ -67,7 +67,7 @@
                   <td class="text-sm"><%= employee.email %></td>
                   <td class="text-sm"><%= employee.phone %></td>
                   <td class="text-sm"><%= employee.position %></td>
-                  <td class="text-sm text-danger"><%= employee.department.name %></td>
+                  <td class="text-sm"><%= employee.department.name %></td>
                   <td class="text-sm"><%= new Date(employee.hiredate).toLocaleDateString('en-US', { year: 'numeric', month: 'numeric', day: 'numeric' }) %></td>
                   <td class="text-sm"><%= employee.salary %></td>
 
