"Added employee show route and view, updated employee edit view, and modified employee index view to include show link"

--- a/src/resource/views/dashboard/employee/edit.ejs
+++ b/src/resource/views/dashboard/employee/edit.ejs
@@ -2,8 +2,8 @@
   <div class="col-lg-9 col-12 mx-auto">
     <div class="card card-body mt-4">
       <form action="/employee/edit/<%= employee._id %>" method="POST">
-        <h6 class="mb-0">New Employee</h6>
-        <p class="text-sm mb-0">Create new Employee</p>
+        <h6 class="mb-0">Update Employee</h6>
+        <p class="text-sm mb-0">Update Employee</p>
         <hr class="horizontal dark my-3">
         <label for="projectName" class="form-label">Name</label>
         <input type="text" name="name" class="form-control" id="" value="<%= employee.name %>" placeholder="Name" required>
