--- a/src/resource/views/dashboard/employee/index.ejs
+++ b/src/resource/views/dashboard/employee/index.ejs
@@ -72,7 +72,7 @@
                   <td class="text-sm"><%= employee.salary %></td>
 
                   <td class="text-sm">
-                    <a href="javascript:;" data-bs-toggle="tooltip" data-bs-original-title="Preview product">
+                    <a href="/employee/show/<%= employee._id %>" data-bs-toggle="tooltip" data-bs-original-title="Preview product">
                       <i class="fas fa-eye text-secondary"></i>
                     </a>
                     <a href="/employee/edit/<%= employee._id %>" class="mx-3" data-bs-toggle="tooltip" data-bs-original-title="Edit product">
@@ -87,13 +87,13 @@
               </tbody>
               <tfoot>
                 <tr>
-                  <th>Product</th>
-                  <th>Category</th>
-                  <th>Price</th>
-                  <th>SKU</th>
-                  <th>Quantity</th>
-                  <th>Status</th>
-                  <th>Action</th>
+                  <th>Name</th>
+                  <th>Email</th>
+                  <th>Phone</th>
+                  <th>Position</th>
+                  <th>Departemen</th>
+                  <th>Employed</th>
+                  <th>Salary</th>
                 </tr>
               </tfoot>
             </table>
