--- a/src/resource/views/dashboard/departement/create.ejs
+++ b/src/resource/views/dashboard/departement/create.ejs
@@ -9,7 +9,7 @@
         <input type="text" name="name" class="form-control" id="departemenName" placeholder="Name">
 
         <label class="mt-4 form-label">Manager</label>
-        <select name="manager" class="form-control" required>
+        <select name="manager" class="form-control choices-multiple-remove-button" id="choices-multiple-remove-button" required>
           <% employees.forEach(employee => { %>
           <option value="<%= employee._id %>"><%= employee.name %></option>
           <% }) %>
@@ -17,9 +17,29 @@
 
         <div class="d-flex justify-content-end mt-4">
           <button type="button" name="button" class="btn btn-light m-0">Cancel</button>
-          <button type="submit" name="button" class="btn bg-gradient-primary m-0 ms-2">Create Departemen</button>
+          <button type="submit" name="button" class="btn bg-gradient-info m-0 ms-2">Create Departemen</button>
         </div>
       </form>
     </div>
   </div>
 </div>
+
+
+<script src="/public/assets/js/plugins/choices.min.js"></script>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    if (document.querySelector('.datetimepicker')) {
+      flatpickr('.datetimepicker', {
+        allowInput: true
+      });
+    }
+
+    const choiceElements = document.querySelectorAll('.choices-multiple-remove-button');
+    choiceElements.forEach(element => {
+      new Choices(element, {
+        removeItemButton: true
+      });
+    });
+  });
+</script>
