--- a/src/resource/views/dashboard/departement/index.ejs
+++ b/src/resource/views/dashboard/departement/index.ejs
@@ -14,7 +14,7 @@
             </div>
             <div class="ms-auto my-auto mt-lg-0 mt-4">
               <div class="ms-auto my-auto">
-                <a href="/departments/add" class="btn bg-gradient-primary btn-sm mb-0">+&nbsp; New Departemen</a>
+                <a href="/departments/add" class="btn bg-gradient-info btn-sm mb-0">+&nbsp; New Departemen</a>
                 <!-- <button type="button" class="btn btn-outline-primary btn-sm mb-0" data-bs-toggle="modal" data-bs-target="#import">
                   Import
                 </button>
