--- a/src/resource/views/dashboard/employee/create.ejs
+++ b/src/resource/views/dashboard/employee/create.ejs
@@ -26,7 +26,7 @@
         <input class="form-control" name="position" type="text" placeholder="Please input position" required>
 
         <label class="mt-4 form-label">Departemen</label>
-        <select class="form-control" name="department" id="">
+        <select class="form-control choices-multiple-remove-button" name="department" id="choices-multiple-remove-button">
           <% departments.forEach(department => { %>
           <option value="<%= department._id %>"><%= department.name %></option>
           <% }) %>
@@ -39,7 +39,7 @@
           </div>
           <div class="col-6">
             <label class="form-label">Gender</label>
-            <select class="form-control" name="gender" id="choices-multiple-remove-button">
+            <select class="form-control choices-multiple-remove-button" name="gender" id="choices-multiple-remove-button">
               <option value="male">Male</option>
               <option value="female">Female</option>
             </select>
@@ -58,7 +58,7 @@
         </div>
         <div class="d-flex justify-content-end mt-4">
           <button type="button" name="button" class="btn btn-light m-0">Cancel</button>
-          <button type="submit" name="button" class="btn bg-gradient-primary m-0 ms-2">Create Employee</button>
+          <button type="submit" name="button" class="btn bg-gradient-info m-0 ms-2">Create Employee</button>
         </div>
       </form>
     </div>
@@ -76,8 +76,14 @@
         allowInput: true
       });
     }
+
+    const choiceElements = document.querySelectorAll('.choices-multiple-remove-button');
+    choiceElements.forEach(element => {
+      new Choices(element, {
+        removeItemButton: true
+      });
+    });
   });
-</script>
-<script>
-  CKEDITOR.replace('content');
+
+  CKEDITOR.replace('description');
 </script>
