--- a/src/resource/views/components/dashboard/asside.ejs
+++ b/src/resource/views/components/dashboard/asside.ejs
@@ -33,7 +33,7 @@
         <h6 class="ps-4  ms-2 text-uppercase text-xs font-weight-bolder opacity-6">PAGES</h6>
       </li>
       <li class="nav-item">
-        <a data-bs-toggle="collapse" href="#pagesExamples" class="nav-link <%= currentRoute.startsWith('/employee') || currentRoute.startsWith('/departments') ? 'active' : '' %>" aria-controls="pagesExamples" role="button" aria-expanded="false">
+        <a data-bs-toggle="collapse" href="#pagesExamples" class="nav-link <%= currentRoute.startsWith('/employee') || currentRoute.startsWith('/departments') ? 'active' : '' || currentRoute.startsWith('/attendance') ? 'active' : ''%>" aria-controls="pagesExamples" role="button" aria-expanded="false">
           <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center d-flex align-items-center justify-content-center  me-2">
             <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <title>office</title>
@@ -51,7 +51,7 @@
           </div>
           <span class="nav-link-text ms-1">Pages</span>
         </a>
-        <div class="collapse <%= currentRoute.startsWith('/employee') || currentRoute.startsWith('/departments') ? 'show' : '' %>  " id="pagesExamples">
+        <div class="collapse <%= currentRoute.startsWith('/employee') || currentRoute.startsWith('/departments') ? 'show' : '' || currentRoute.startsWith('/attendance') ? 'show' : ''%>  " id="pagesExamples">
           <ul class="nav ms-4 ps-3">
             <li class="nav-item ">
               <a class="nav-link <%= currentRoute.startsWith('/employee') ? 'active' : '' %>" href="/employee">
@@ -63,6 +63,12 @@
               <a class="nav-link employee" href="/departments">
                 <span class="sidenav-mini-icon"> D </span>
                 <span class="sidenav-normal"> Departments </span>
+              </a>
+            </li>
+            <li class="nav-item <%= currentRoute.startsWith('/attendance') ? 'active' : '' %>">
+              <a class="nav-link employee" href="/attendance">
+                <span class="sidenav-mini-icon"> A </span>
+                <span class="sidenav-normal"> Attendance </span>
               </a>
             </li>
           </ul>
