--- a/src/resource/views/components/dashboard/asside.ejs
+++ b/src/resource/views/components/dashboard/asside.ejs
@@ -33,8 +33,8 @@
         <h6 class="ps-4  ms-2 text-uppercase text-xs font-weight-bolder opacity-6">PAGES</h6>
       </li>
       <li class="nav-item">
-        <a data-bs-toggle="collapse" href="#pagesExamples" class="nav-link <%= currentRoute.startsWith('/employee') || currentRoute.startsWith('/departments') ? 'active' : '' || currentRoute.startsWith('/attendance') ? 'active' : ''%>" aria-controls="pagesExamples" role="button" aria-expanded="false">
-          <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center d-flex align-items-center justify-content-center  me-2">
+        <a data-bs-toggle="collapse" href="#pagesExamples" class="nav-link <%= currentRoute.match(/^\/(employee|departments|attendance|payroll)/) ? 'active' : '' %>" aria-controls="pagesExamples" role="button" aria-expanded="false">
+          <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center d-flex align-items-center justify-content-center me-2">
             <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <title>office</title>
               <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -51,29 +51,36 @@
           </div>
           <span class="nav-link-text ms-1">Pages</span>
         </a>
-        <div class="collapse <%= currentRoute.startsWith('/employee') || currentRoute.startsWith('/departments') ? 'show' : '' || currentRoute.startsWith('/attendance') ? 'show' : ''%>  " id="pagesExamples">
+        <div class="collapse <%= currentRoute.match(/^\/(employee|departments|attendance|payroll)/) ? 'show' : '' %>" id="pagesExamples">
           <ul class="nav ms-4 ps-3">
-            <li class="nav-item ">
+            <li class="nav-item">
               <a class="nav-link <%= currentRoute.startsWith('/employee') ? 'active' : '' %>" href="/employee">
                 <span class="sidenav-mini-icon"> E </span>
                 <span class="sidenav-normal"> Employee </span>
               </a>
             </li>
-            <li class="nav-item <%= currentRoute.startsWith('/departments') ? 'active' : '' %>">
-              <a class="nav-link employee" href="/departments">
+            <li class="nav-item">
+              <a class="nav-link <%= currentRoute.startsWith('/departments') ? 'active' : '' %>" href="/departments">
                 <span class="sidenav-mini-icon"> D </span>
                 <span class="sidenav-normal"> Departments </span>
               </a>
             </li>
-            <li class="nav-item <%= currentRoute.startsWith('/attendance') ? 'active' : '' %>">
-              <a class="nav-link employee" href="/attendance">
+            <li class="nav-item">
+              <a class="nav-link <%= currentRoute.startsWith('/attendance') ? 'active' : '' %>" href="/attendance">
                 <span class="sidenav-mini-icon"> A </span>
                 <span class="sidenav-normal"> Attendance </span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link <%= currentRoute.startsWith('/payroll') ? 'active' : '' %>" href="/payroll">
+                <span class="sidenav-mini-icon"> P </span>
+                <span class="sidenav-normal"> Payroll </span>
               </a>
             </li>
           </ul>
         </div>
       </li>
+
       <li class="nav-item">
         <a data-bs-toggle="collapse" href="#applicationsExamples" class="nav-link " aria-controls="applicationsExamples" role="button" aria-expanded="false">
           <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center d-flex align-items-center justify-content-center  me-2">
