"Added leave route and controller, updated attendance, department, and employee index views to include action columns"

--- a/src/resource/views/dashboard/departement/index.ejs
+++ b/src/resource/views/dashboard/departement/index.ejs
@@ -53,6 +53,7 @@
                 <tr>
                   <th>Name</th>
                   <th>Manager</th>
+                  <th>Action</th>
                 </tr>
               </thead>
               <tbody>
@@ -79,6 +80,7 @@
                 <tr>
                   <th>Name</th>
                   <th>Manager</th>
+                  <th>Action</th>
                 </tr>
               </tfoot>
             </table>
