--- a/src/resource/views/dashboard/employee/index.ejs
+++ b/src/resource/views/dashboard/employee/index.ejs
@@ -58,6 +58,7 @@
                   <th>Departemen</th>
                   <th>Employed</th>
                   <th>Salary</th>
+                  <th>Action</th>
                 </tr>
               </thead>
               <tbody>
@@ -94,6 +95,7 @@
                   <th>Departemen</th>
                   <th>Employed</th>
                   <th>Salary</th>
+                  <th>Action</th>
                 </tr>
               </tfoot>
             </table>
