--- a/src/resource/views/dashboard/attendance/index.ejs
+++ b/src/resource/views/dashboard/attendance/index.ejs
@@ -28,6 +28,7 @@
                   <th>Date</th>
                   <th>Status</th>
                   <th>Description</th>
+                  <th>Action</th>
                 </tr>
               </thead>
               <tbody>
@@ -80,6 +81,7 @@
                   <th>Date</th>
                   <th>Status</th>
                   <th>Description</th>
+                  <th>Action</th>
                 </tr>
               </tfoot>
             </table>
