"Updated aside.ejs: changed link text, added conditional active class, and modified collapse content"

--- a/src/resource/views/components/dashboard/asside.ejs
+++ b/src/resource/views/components/dashboard/asside.ejs
@@ -88,7 +88,7 @@
       </li>
 
       <li class="nav-item">
-        <a data-bs-toggle="collapse" href="#applicationsExamples" class="nav-link " aria-controls="applicationsExamples" role="button" aria-expanded="false">
+        <a data-bs-toggle="collapse" href="#applicationsExamples" class="nav-link <%= currentRoute.match(/^\/(permission|role)/) ? 'active' : '' %>" aria-controls="applicationsExamples" role="button" aria-expanded="false">
           <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center d-flex align-items-center justify-content-center  me-2">
             <svg width="12px" height="12px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <title>settings</title>
@@ -105,38 +105,20 @@
               </g>
             </svg>
           </div>
-          <span class="nav-link-text ms-1">Applications</span>
+          <span class="nav-link-text ms-1">Settings</span>
         </a>
-        <div class="collapse " id="applicationsExamples">
+        <div class="collapse <%= currentRoute.match(/^\/(permission|role)/) ? 'show' : '' %>" id="applicationsExamples">
           <ul class="nav ms-4 ps-3">
             <li class="nav-item ">
-              <a class="nav-link " href="../../applications/kanban.html">
-                <span class="sidenav-mini-icon"> K </span>
-                <span class="sidenav-normal"> Kanban </span>
+              <a class="nav-link <%= currentRoute.startsWith('/role') ? 'active' : '' %>" href="/role">
+                <span class="sidenav-mini-icon"> R </span>
+                <span class="sidenav-normal"> Role </span>
               </a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link " href="../../applications/wizard.html">
-                <span class="sidenav-mini-icon"> W </span>
-                <span class="sidenav-normal"> Wizard </span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " href="../../applications/datatables.html">
-                <span class="sidenav-mini-icon"> D </span>
-                <span class="sidenav-normal"> DataTables </span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " href="../../applications/calendar.html">
-                <span class="sidenav-mini-icon"> C </span>
-                <span class="sidenav-normal"> Calendar </span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " href="../../applications/analytics.html">
-                <span class="sidenav-mini-icon"> A </span>
-                <span class="sidenav-normal"> Analytics </span>
+              <a class="nav-link <%= currentRoute.startsWith('/permission') ? 'active' : '' %>" href="/permission">
+                <span class="sidenav-mini-icon"> P </span>
+                <span class="sidenav-normal"> Permission </span>
               </a>
             </li>
           </ul>
