--- a/src/resource/views/dashboard/leave/index.ejs
+++ b/src/resource/views/dashboard/leave/index.ejs
@@ -22,6 +22,7 @@
             <table class="table table-flush" id="products-list">
               <thead class="thead-light">
                 <tr>
+                  <th>#</th>
                   <th>Employee</th>
                   <th>Start Date</th>
                   <th>End Date</th>
@@ -33,8 +34,9 @@
                 </tr>
               </thead>
               <tbody>
-                <% leaves.forEach(leave => { %>
+                <% leaves.forEach((leave, index) => { %>
                 <tr>
+                  <td class="text-sm"><%= index + 1 %></td>
                   <td class="text-sm"><%= leave.employee.name %></td>
                   <td class="text-sm"><%= leave.startDate.toISOString().split('T')[0] %></td>
                   <td class="text-sm"><%= leave.endDate.toISOString().split('T')[0] %></td>
@@ -98,6 +100,7 @@
               </tbody>
               <tfoot>
                 <tr>
+                  <th>#</th>
                   <th>Employee</th>
                   <th>Start Date</th>
                   <th>End Date</th>
