--- a/src/resource/views/dashboard/payroll/index.ejs
+++ b/src/resource/views/dashboard/payroll/index.ejs
@@ -22,6 +22,7 @@
             <table class="table table-flush" id="products-list">
               <thead class="thead-light">
                 <tr>
+                  <th>#</th>
                   <th>Employee</th>
                   <th>Pay Period</th>
                   <th>Basic Salary</th>
@@ -32,8 +33,9 @@
                 </tr>
               </thead>
               <tbody>
-                <% payrolls.forEach(payroll => { %>
+                <% payrolls.forEach((payroll, index) => { %>
                 <tr>
+                  <td class="text-sm"><%= index + 1 %></td>
                   <td class="text-sm"><%= payroll.employee.name %></td>
                   <td class="text-sm"><%= new Date(payroll.payPeriod).toISOString().split('T')[0] %></td>
                   <td class="text-sm currency"><%= Number(payroll.basicSalary) %></td>
@@ -56,6 +58,7 @@
               </tbody>
               <tfoot>
                 <tr>
+                  <th>#</th>
                   <th>Employee</th>
                   <th>Pay Period</th>
                   <th>Basic Salary</th>
