--- a/src/resource/views/dashboard/roleAndPermission/permission/index.ejs
+++ b/src/resource/views/dashboard/roleAndPermission/permission/index.ejs
@@ -24,14 +24,16 @@
             <table class="table table-flush" id="products-list">
               <thead class="thead-light">
                 <tr>
+                  <th>#</th>
                   <th>Name</th>
                   <th>Guard Name</th>
                   <th>Action</th>
                 </tr>
               </thead>
               <tbody>
-                <% permissions.forEach(permission => { %>
+                <% permissions.forEach((permission, index) => { %>
                 <tr>
+                  <td class="text-sm"><%= index + 1 %></td>
                   <td class="text-sm"><%= permission.name %></td>
                   <td class="text-sm"><%= permission.guardName %></td>
 
@@ -51,6 +53,7 @@
               </tbody>
               <tfoot>
                 <tr>
+                  <th>#</th>
                   <th>Name</th>
                   <th>Guard Name</th>
                   <th>Action</th>
